poc_interop/src/include/mdspan_interop.hpp

#pragma once
#include <string>
#include <memory>
#include <iostream>
#include <Kokkos_Core.hpp>
#include <utility>
#include <stdexcept>
#include <cstdlib>
#include <type_traits>
		
#include "types.hpp"

extern "C" {

    struct SharedArrayViewMut{
        void* ptr;

        int size;

        DataType data_type;

        int rank;

        const size_t* shape;
        
        MemSpace mem_space;

        Layout layout;
    };

    struct SharedArrayView{
        const void* ptr;

        int size;

        DataType data_type;

        int rank;

        const size_t* shape;
        
        MemSpace mem_space;

        Layout layout;
    };

    Errors deep_copy(SharedArrayViewMut &arrayView1, const SharedArrayView &arrayView2);

    SharedArrayView dot(const SharedArrayView &arrayView1, const SharedArrayView &arrayView2);
    SharedArrayView matrix_vector_product(const SharedArrayView &arrayView1, const SharedArrayView &arrayView2);
    SharedArrayView matrix_product(const SharedArrayView &arrayView1, const SharedArrayView &arrayView2);
    void mutable_matrix_product(SharedArrayViewMut &arrayView1, const SharedArrayView &arrayView2, const SharedArrayView &arrayView3);
    void bad_modifier(SharedArrayViewMut &arrayView);
    void kokkos_initialize();
    void kokkos_finalize();
    void free_shared_array(void* ptr);

    //Cpp test, to call from rust.
    void cpp_var_rust_func_test();
    void cpp_var_rust_func_mutable_test();

    // Rust side
    double mat_reduce(SharedArrayView shared_arr);
    void mat_add_one(SharedArrayViewMut shared_arr);
}

template <typename T = double>
Kokkos::View<const T**, Kokkos::LayoutRight, Kokkos::DefaultExecutionSpace::memory_space, Kokkos::MemoryTraits<Kokkos::Unmanaged>> view2D_from_shared(const SharedArrayView &arrayView) {
    const size_t* shape = arrayView.shape;
    const T* typed_ptr = static_cast<const T*>(arrayView.ptr);
    Kokkos::View<const T**, Kokkos::LayoutRight, Kokkos::DefaultExecutionSpace::memory_space, Kokkos::MemoryTraits<Kokkos::Unmanaged>> casted_view(typed_ptr, shape[0], shape[1]);
    return casted_view;
}

template <typename T, int D, std::size_t... Is>
Kokkos::mdspan<const T, Kokkos::dextents<std::size_t, D>> mdspan_from_shared_impl(const SharedArrayView &arrayView, std::index_sequence<Is...>) {
    // if(arrayView.mem_space == MemSpace::HostSpace) {
        const size_t* shape = arrayView.shape;
        const T* typed_ptr = static_cast<const T*>(arrayView.ptr);
        Kokkos::mdspan<const T, Kokkos::dextents<std::size_t, D>> casted_span = Kokkos::mdspan(typed_ptr, shape[Is]...);
        return casted_span; 
    // }
    // TODO: Else, return une Kokkos::view sur device
}

template <int D, typename T = double>
Kokkos::mdspan<const T, Kokkos::dextents<std::size_t, D>> mdspan_from_shared(const SharedArrayView &arrayView) {
    if (arrayView.rank != D) {
        throw std::runtime_error("Incompatible dimensions of cast and sharedArrayView");
    }
    return mdspan_from_shared_impl<T, D>(arrayView, std::make_index_sequence<D>{});
}

template <typename T, int D, std::size_t... Is>
Kokkos::mdspan<T, Kokkos::dextents<std::size_t, D>> mdspan_from_shared_mut_impl(SharedArrayViewMut &arrayView, std::index_sequence<Is...>) {
    // if(arrayView.mem_space == MemSpace::HostSpace) {
        const size_t* shape = arrayView.shape;
        T* typed_ptr = static_cast<T*>(arrayView.ptr);
        Kokkos::mdspan<T, Kokkos::dextents<std::size_t, D>> casted_span = Kokkos::mdspan(typed_ptr, shape[Is]...);
        return casted_span;
    // }
    // TODO: Else, return une Kokkos::view sur device
}

template <int D, typename T = double>
Kokkos::mdspan<T, Kokkos::dextents<std::size_t, D>> mdspan_from_shared_mut(SharedArrayViewMut &arrayView) {
    if (arrayView.rank != D) {
        throw std::runtime_error("Incompatible dimensions of cast and sharedArrayView");
    }
    return mdspan_from_shared_mut_impl<T, D>(arrayView, std::make_index_sequence<D>{});
}

template <int D, typename T>
SharedArrayViewMut to_shared_mut(Kokkos::mdspan<T, Kokkos::dextents<std::size_t, D>> fromMds, MemSpace mem_space = MemSpace::HostSpace) {
    int rank = fromMds.rank();
    size_t* shape = new size_t[7];
    for (int i = 0; i < rank; i++)
    {
        shape[i] = fromMds.extent(i);
    }
    Layout layout = Layout::LayoutStride;
    DataType datatype = DataType::Unsigned;
    if (std::is_unsigned_v<T> == false)
    {
        if (std::is_floating_point_v<T> == true)
        {
            datatype = DataType::Float;
        } else {
            datatype = DataType::Signed;
        }
    }
    // TODO : Une maniere de detecter si layout_left ou layout_right ?
    return SharedArrayViewMut {
        fromMds.data_handle(),
        sizeof(T),
        datatype, 
        rank,
        shape,
        mem_space,
        layout,
    };
}

template <int D, typename T>
SharedArrayView to_shared(Kokkos::mdspan<T, Kokkos::dextents<std::size_t, D>> fromMds, MemSpace mem_space = MemSpace::HostSpace) {
    int rank = fromMds.rank();
    size_t* shape = new size_t[7];
    for (int i = 0; i < rank; i++)
    {
        shape[i] = fromMds.extent(i);
    }
    Layout layout = Layout::LayoutStride;
    DataType datatype = DataType::Unsigned;
    if (std::is_unsigned_v<T> == false)
    {
        if (std::is_floating_point_v<T> == true)
        {
            datatype = DataType::Float;
        } else {
            datatype = DataType::Signed;
        }
    }
    // TODO : Une maniere de detecter si layout_left ou layout_right ?
    return SharedArrayView {
        fromMds.data_handle(),
        sizeof(T),
        datatype, 
        rank,
        shape,
        mem_space,
        layout,
    };
}

template <typename T = double>
SharedArrayView templated_dot(const SharedArrayView &arrayView1, const SharedArrayView &arrayView2) {
    auto vec1 = mdspan_from_shared<1, T>(arrayView1);
    auto vec2 = mdspan_from_shared<1, T>(arrayView2);

    if (vec1.extent(0) != vec2.extent(0)) {
        throw std::runtime_error("Incompatible sizes of vectors");
    }

    T r = 0;
    for (size_t i = 0; i < vec1.extent(0); i++)
    {
        r += vec1[i]*vec2[i];
    }

    T* tmp = reinterpret_cast<T*>(std::malloc(sizeof(T)));

    tmp[0] = r;
    const T* heap_result = tmp;
    auto result = Kokkos::mdspan(heap_result, 1);
    return to_shared<1>(result, MemSpace::HostSpace);
}

template <typename T = double>
SharedArrayView templated_matrix_vector_product(const SharedArrayView &arrayView1, const SharedArrayView &arrayView2) {
    auto mat = mdspan_from_shared<2, T>(arrayView1);
    auto vec = mdspan_from_shared<1, T>(arrayView2);

    if (mat.extent(1) != vec.extent(0)) {
        throw std::runtime_error("Incompatible sizes of matrix and vector");
    }

    // sur la heap pour que la valeur reste après la sortie de la fonction
    T* tmp = reinterpret_cast<T*>(std::malloc(mat.extent(0)*sizeof(T)));

    for (size_t i = 0; i < mat.extent(0); i++)
    {
        T r = 0;
        for (size_t j = 0; j < mat.extent(1); j++)
        {
            r += mat(i,j)*vec[j];
        }
        tmp[i] = r;
    }

    const T* heap_result = tmp;
    auto result = Kokkos::mdspan(heap_result, mat.extent(0));
    return to_shared<1>(result);
}

template <typename T = double>
SharedArrayView templated_matrix_product(const SharedArrayView &arrayView1, const SharedArrayView &arrayView2) {
    if (arrayView1.shape[1] != arrayView2.shape[0]) {
        throw std::runtime_error("Incompatible sizes of matrices.");
    } else if (arrayView1.rank != 2 || arrayView2.rank != 2) {
        throw std::runtime_error("The arrayViews are not of rank 2.");
    }

    if (arrayView1.mem_space == arrayView2.mem_space && arrayView1.mem_space == MemSpace::HostSpace) {
        auto mat1 = mdspan_from_shared<2, T>(arrayView1);
        auto mat2 = mdspan_from_shared<2, T>(arrayView2);
        
        T* tmp = reinterpret_cast<T*>(std::malloc(mat1.extent(0)*mat2.extent(1)*sizeof(T)));

        Kokkos::parallel_for("host_matrix_product", Kokkos::MDRangePolicy<Kokkos::Rank<2>>({0,0}, {mat1.extent(0), mat2.extent(1)}), KOKKOS_LAMBDA (const int i, const int j) {
                T r = 0;
                for (size_t k = 0; k < mat1.extent(1); k++)
                {
                    r += mat1(i,k)*mat2(k,j);
                }
                tmp[i*mat2.extent(1) + j] = r;
            }
        );

        const T* heap_result = tmp;
        auto result = Kokkos::mdspan(heap_result, mat1.extent(0), mat2.extent(1));
        return to_shared<2>(result);   

    } else if (arrayView1.mem_space == arrayView2.mem_space && arrayView1.mem_space != MemSpace::HostSpace) {
        auto mat1 = view2D_from_shared<T>(arrayView1);
        auto mat2 = view2D_from_shared<T>(arrayView2);
        
        std::cout << "Device matrix product" << "\n";

        T* tmp = reinterpret_cast<T*>(std::malloc(mat1.extent(0)*mat2.extent(1)*sizeof(T)));

        Kokkos::parallel_for("device_matrix_product", Kokkos::MDRangePolicy<Kokkos::DefaultExecutionSpace, Kokkos::Rank<2>>({0,0}, {mat1.extent(0), mat2.extent(1)}), KOKKOS_LAMBDA (const int i, const int j) {
                T r = 0;
                for (size_t k = 0; k < mat1.extent(1); k++)
                {
                    r += mat1(i,k)*mat2(k,j);
                }
                tmp[i*mat2.extent(1) + j] = r;
            }
        );

        const T* heap_result = tmp;
        auto result = Kokkos::mdspan(heap_result, mat1.extent(0), mat2.extent(1));
        return to_shared<2>(result);   
    } else {
        throw std::runtime_error("Incompatible memSpaces of arrayViews");
    }

}